# hslr

./: .gitignore  AWS_Key_Master.pem  Art.hs  CHANGELOG.md  CodeGeneration.hs  Example.hs  HSLR.hs  HaskellShadingLanguage.cabal  Main.hs  Question.hs  README.md  Run.hs  SyntaxTree.hs  SyntaxTree_.hs  Test.hs  Test2.hs  desired_results.glsl  fur  main.hs  noise.glsl  optimizer.py  out copy.frag  out.frag  out.glsl  out1.glsl  pr  q.hs  questions.md  runtime.glsl  stack.yaml  tes.hs  tmp  triangle.frag  triangle.hs  work.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dump/: firstattemptsyntaxtree.hs
lib/: noise.glsl
src/: CodeGeneration.hs  Compiler.hs  Language.hs  Optimizer.hs  RoseTree.hs  Runtime.hs  Spreadable.hs  SyntaxTree.hs
