cabal-version:      2.4
name:               HaskellShadingLanguage
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Iain Moncrief
maintainer:         moncrief@oregonstate.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable HaskellShadingLanguage
    main-is:          main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0
        , sort ^>=1.0.0.0
        , containers
    hs-source-dirs:
        .
        , src
    default-language: Haskell2010
